infra/k8s/11-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cortecertoapp-backend
  namespace: cortecerto
spec:
  selector:
    app: cortecertoapp-backend
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
