infra/k8s/21-admin-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cortecertoapp-admin-panel
  namespace: cortecerto
spec:
  selector:
    app: cortecertoapp-admin-panel
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
