infra/k8s/31-frontend-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cortecertoapp-public-web
  namespace: cortecerto
spec:
  selector:
    app: cortecertoapp-public-web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
