infra/k8s/41-landing-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cortecertoapp-landing
  namespace: cortecerto
spec:
  selector:
    app: cortecertoapp-landing
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
