infra/k8s/51-mobile-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cortecertoapp-mobile-web
  namespace: cortecerto
spec:
  selector:
    app: cortecertoapp-mobile-web
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: ClusterIP
