infra/k8s/90-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cortecertoapp-ingress
  namespace: cortecerto
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: nginx
  rules:
    - host: api.cortecerto.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cortecertoapp-backend
                port:
                  number: 80
    - host: admin.cortecerto.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cortecertoapp-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cortecertoapp-admin-panel
                port:
                  number: 80
    - host: app.cortecerto.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cortecertoapp-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cortecertoapp-public-web
                port:
                  number: 80
    - host: landing.cortecerto.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cortecertoapp-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cortecertoapp-landing
                port:
                  number: 80
    - host: mobile.cortecerto.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: cortecertoapp-backend
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cortecertoapp-mobile-web
                port:
                  number: 80
